--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,20 @@
 <h1>Update Pet</h1>
 
+<h2>Edits for <%= @pet.name %></h2>
 
+<form action="/pets/<%= @pet.id %>" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label>Edit the Pet's Name:</label><br>
+  <input type="text" name="pet_name" value="<%= @pet.name %>">
+  <br>
+  <h3>Existing Owners</h3>
+  <% @owners.each do |owner| %>
+    <input type="radio" name="owner[id]" id="<%= owner.id %>" value="<%= owner.id %>" <%='checked' if @pet.owner.id == owner.id %>><%= owner.name %></input><br>
+  <% end %>
+  <br>
+  <h3>New Owner</h3>
+  <input type="text" id="owner_name" name="owner[name]"><br>
+  <input type="submit"  value="Update Pet">
+
+
+</form>
