--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,22 @@
 <h1>Create a new Pet</h1>
 
+<form action="/pets" method="POST">
+
+  <h3>New Pet</h3>
+  <label>Pet Name: </label>
+  <br>
+  <input type="text" name="pet[name]" id="pet_name"></input>
+  <br><br>
+  <label>Existing Owners:</label><br>
+  <% @owners.each do |owner| %>
+    <input type="radio" name="pet[owner_id]" id="<%= owner.id %>" value="<%= owner.id %>"><%= owner.name %></input><br>
+  <% end %>
+  <br><br>
+
+  <label>New Owner:</label><br>
+  <input type="text" name="owner[name]" id="owner_name"></input>
+
+  <br><br>
+
+  <input type="submit" value="Create Pet">
+</form>
